--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Elemento de áudio oculto, sem controles nativos -->
     <audio id="meuAudio">
-        <source src="/assets/sound/fitamp3.mp3" type="audio/mpeg">
+        <source src="../sound/fitamp3.mp3" type="audio/mpeg">
         Seu navegador não suporta o áudio.
     </audio>
 
